--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+# Applying
+Find out where DBM is installed by Steam. In the main files, find the folder that is named "themes". Open the "themes" folder and paste the entire theme folder into it. After that is done, open DBM and it should be displayed under the themes bar when clicked on!
